--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,19 @@
 [project]
-name = "hexlet-code"
+name = "gendiff"
 version = "0.1.0"
 description = "Compares two configuration files and shows a difference."
 readme = "README.md"
 requires-python = ">=3.8"
-dependencies = []
+dependencies = [
+    "pyyaml>=6.0"
+]
 
 [project.scripts]
-gendiff = "hexlet_code.scripts.gendiff:main"
+gendiff = "gendiff.cli:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["hexlet_code"]
+packages = ["gendiff"]
