--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -24,7 +24,7 @@ jobs:
         pip install -e .
     - name: Run tests with coverage
       run: |
-        pytest --cov=gendiff --cov-report=xml --cov-report=html
+        python -m pytest --cov=gendiff --cov-report=xml --cov-report=html
     - name: SonarCloud Scan
       uses: SonarSource/sonarcloud-github-action@v2.1.1
       env:
