Fix tests: use python -m pytest, add setup.py for compatibility

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,13 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["gendiff"]
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["gendiff*"]
+
+[tool.setuptools]
+packages = ["gendiff"]
+
+[tool.setuptools.package-dir]
+gendiff = "gendiff"
