--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -21,4 +21,21 @@ jobs:
       run: |
         pip install --upgrade pip
         pip install setuptools pytest pytest-cov
-        pip install setuptools && pip install pyyaml && pip install -e .
+        pip install .
+    - name: Verify import
+      run: python -c "from gendiff import generate_diff; print('OK')"
+    - name: Run tests with coverage
+      run: |
+        python -m pytest --cov=gendiff --cov-report=xml --cov-report=html
+    - name: SonarCloud Scan
+      uses: SonarSource/sonarcloud-github-action@v2.1.1
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      with:
+        args: >
+          -Dsonar.organization=polva31
+          -Dsonar.projectKey=Polva31_python-project-50
+          -Dsonar.python.coverage.reportPaths=coverage.xml
+          -Dsonar.sources=gendiff
+          -Dsonar.tests=tests
+          -Dsonar.verbose=true
